--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,14 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.3",
+        "filament/infolists": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "opcodesio/log-viewer": "^3.15",
         "spatie/laravel-activitylog": "^4.10"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
