--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "filament/filament": "^3.3",
         "filament/infolists": "^3.3",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "opcodesio/log-viewer": "^3.15",
         "spatie/laravel-activitylog": "^4.10"
