--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME="Pro Profiles"
+APP_ENV=Production
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://proprofiles.benignconsult.co.ke
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -35,7 +35,7 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
 
 CACHE_STORE=database
 # CACHE_PREFIX=
@@ -47,13 +47,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER=smtp
+MAIL_HOST=mail.benignconsult.co.ke
+MAIL_PORT=465
+MAIL_USERNAME=noreply@benignconsult.co.ke
+MAIL_PASSWORD='g*0RLzI+gMDr'
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=noreply@benignconsult.co.ke
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
