--- a/.github/workflows/cpanelDeployment.yml
+++ b/.github/workflows/cpanelDeployment.yml
@@ -83,18 +83,23 @@ jobs:
       - name: Unzip release
         run: unzip release/*.zip
 
-      - name: Upload via SFTP
-        uses: appleboy/scp-action@v1
+      - name: Deploy via lftp
+        uses: sebastianpopp/ftp-action@releases/v2
         with:
           host:      ${{ secrets.FTP_HOST }}
-          username:  ${{ secrets.FTP_USERNAME }}
+          user:      ${{ secrets.FTP_USERNAME }}
           password:  ${{ secrets.FTP_PASSWORD }}
-          port:      22
-          # exclude: |
-          #   #**/public/**
-          #   **/.env
-          #   **/.git*
-          #   #**/database/database.sqlite
-          #   **/node_modules/**
-          #   **/release-*.zip
-          #   **/vendor/**
+          localDir:  "./"
+          remoteDir: "/"
+          options:   "--delete
+                      --mirror
+                      --verbose
+                      --passive
+                      # --active
+                      --exclude-glob .env
+                      --exclude-glob .git*
+                      --exclude-glob database/database.sqlite
+                      --exclude-glob node_modules/*
+                      --exclude-glob release-*.zip
+                      --exclude-glob vendor/*
+                      "
